--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
   <canvas id=c></canvas>
   <canvas id="confetti"></canvas>
   <div class="container" id="count">
-    <h1 id="head">😱 Countdown to Dororo Episode 14: 🤵</h1>
+    <h1 id="head">😱 Countdown to Dororo Episode 15: 🤵</h1>
     <ul>
       <li><span id="day"></span>days</li>
       <li><span id="hour"></span>hours</li>
       <li><span id="minute"></span>minutes</li>
       <li><span id="second"></span>seconds</li>
     </ul>
-    <h1 id="head">Dororo Last Episode : <a class="linknormal" href="https://www.youtube.com/watch?v=xdnUv6ui4Qc">The Story of Blank-Faced Buddha</a></h1>
+    <h1 id="head">Dororo Last Episode : <a class="linknormal" href="https://www.youtube.com/watch?v=xdnUv6ui4Qc">The Story of Sabame</a></h1>
   </div>
   <div id="merrywrap" class="merrywrap">
     <canvas id="snowfall"></canvas>
